-M 审阅后修改

--- a/AIPND Capstone Template.ipynb
+++ b/AIPND Capstone Template.ipynb
@@ -54,8 +54,9 @@
     "分析数据集特征，将数据集拆分为训练集和测试集，使用sklearn拟合线性回归模型，调整参数并解释结果，最后使用交叉验证评估模型。\n",
     "使用模型预测结果，当收益率大于零时买入。\n",
     "### 3.评价指标\n",
-    "\n",
-    "R2score指标可以衡量自变量对因变量的解释程度，R2score的值为0-1之间，越接近1表明拟合度越高。通过在训练集上拟合模型，在测试集上计算模型的R2score评价模型。"
+    "这里选择R2score作为评价指标。\n",
+    "R2score指标是计算目标变量的预测值和实际值之间的相关程度平方的百分比，数值范围从0至1，计算方法是用1 - 模型均方差/最简单模型均方差（预测值直接取均值）。R2越接近1，则模型均方差越接近0，意味着可以从自变量预测因变量。R2越接近0，模型均方差越接近最简单模型均方差，意味着不需要预测，直接用最简单模型即可。模型也可能出现负值的 𝑅2，这种情况下模型所做预测有时会比直接计算目标变量的平均值差很多。\n",
+    "以上，我们可以通过计算 R2score 来判断模型的拟合程度，在训练集上拟合模型，在测试集上计算模型的R2score评价模型。"
    ]
   },
   {
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +175,7 @@
        "4 -0.023006  "
       ]
      },
-     "execution_count": 277,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +314,7 @@
        "2006-03-07 -0.023006  "
       ]
      },
-     "execution_count": 278,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +487,7 @@
        "max       0.093418  "
       ]
      },
-     "execution_count": 280,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +630,7 @@
        "CHGPct        1.000000  "
       ]
      },
-     "execution_count": 282,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,6 +657,9 @@
     "通过可视化看到，CHG与CHGPct呈正态分布，turnoverVol呈右偏态,turnoverVol的分布图可以明显看出右侧有离群值\n",
     "\n",
     "### 3.算法和技术\n",
+    "线性回归是一种通过特征的线性组合来进行预测的线性模型，模型的结果是找到拟合最佳的回归线来预测 y 值，\n",
+    "要找出最佳回归线，我们用的主要算法叫做最小二乘法，使用该算法，我们可找出一条最小化误差函数的回归线。\n",
+    "线性回归可以分析两种或两种以上变量间相互依赖的定量关系，我们的数据集中因变量为数值型，所以适合使用线性回归。\n",
     "根据观察到的特点，线性回归需要用 log 函数将数据从偏态分布转换为正态分布，并进行标准化。\n"
    ]
   },
